k8s-yaml/tracing/service2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service2
  template:
    metadata:
      labels:
        app: service2
    spec:
      containers:
        - name: service0
          imagePullPolicy: Always
          image: miles0wu/simple-http-server:tracing
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service2
spec:
  ports:
    - name: http-service2
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: service2
